2011-10-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Added support for reading AAC tracks from
	MPEG transport streams.

2011-10-17  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Relaxed the compatibility checks when
	concatenating VP8 video tracks.

2011-10-16  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed PCM audio in WAV sometimes being
	detected as DTS.

	* mkvmerge: enhancement: The verbose identification mode will add
	the properties "default_duration", "audio_sampling_frequency" and
	"audio_channels" if appropriate and if the corresponding header
	elements are present.

2011-10-13  Moritz Bunkus  <moritz@bunkus.org>

	* Packaging: In v5.0.1 mmg's guide was accidentally moved into the
	"mkvtoolnix" Debian/Ubuntu package. It has been moved back into
	"mkvtoolnix-gui" again.

2011-10-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: "Castilan" has been merged with "Spanish"
	into "Spanish; Castillan" in the ISO 639 language list as both
	share the same ISO 639-2 code "spa".

2011-10-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.0.1.

2011-10-08  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Updated the Debian/Ubuntu files to debhelper
	v7/quilt 3.0 format.

	* mkvmerge: enhancement: Implemented support for yet another way
	of storing EAC3 and DTS in MPEG transport streams.

2011-10-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Track information was not reset when opening
	more than one file in the GUI.

2011-10-03  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The PGS subtitle output module was not
	outputting any packet in certain cases due to uninitialized
	variables.

2011-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed mkvmerge not finding any track in TS
	streams whose first PMT packet could not be parsed (e.g. invalid
	CRC).

	* mkvmerge: bug fix: Fixed detection of TS streams that only